Table "post_offices" {
  "id" serial [pk, not null, increment]
  "acores_id" varchar
  "parent_office_acores_id" varchar [note: 'Reference to parent/main office']
  "name" varchar [not null, note: 'Post office name']
  "site_type" varchar [note: 'Type/category of the site']
  "street_address" text [not null]
  "address_complement" text [note: 'Additional address information']
  "postal_code" varchar(10) [not null]
  "city" varchar [not null]
  "insee_code" varchar(5) [note: 'French INSEE municipality code']
  "country" varchar [not null, default: 'France']
  "latitude" decimal(10,8) [note: 'GPS latitude coordinate']
  "longitude" decimal(11,8) [note: 'GPS longitude coordinate']
  "phone_number" varchar(20) [note: 'Contact phone number']
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamp [default: `CURRENT_TIMESTAMP`]
}

Table "delivery_companies" {
  "id" serial [pk, not null, increment]
  "company_name" varchar(100) [unique, not null]
  "contact_email" varchar(255)
  "contact_phone" varchar(20)
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamp [default: `CURRENT_TIMESTAMP`]
}

Table "delivery_personnel" {
  "id" serial [pk, not null, increment]
  "employee_id" integer [unique, not null, note: 'Company employee ID']
  "first_name" varchar(50) [not null]
  "last_name" varchar(50) [not null]
  "email" varchar(255) [unique, not null]
  "phone_number" varchar(20)
  "primary_office_id" integer [not null]
  "company_id" integer [not null]
  "hire_date" date [not null]
  "is_active" boolean [default: true]
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamp [default: `CURRENT_TIMESTAMP`]
}

Table "clients" {
  "id" serial [pk, not null, increment]
  "first_name" varchar(50) [not null]
  "last_name" varchar(50) [not null]
  "account_email" varchar(255) [unique, not null, note: 'Must be a valid email address']
  "account_phone_number" varchar(20) [unique, note: 'International format preferred']
  "account_password_hash" varchar(255) [not null, note: 'Argon2 password hash']
  "default_address" text
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamp [default: `CURRENT_TIMESTAMP`]
}

Table "shops" {
  "id" serial [pk, not null, increment, note: 'Unique shop identifier']
  "name" varchar(255) [not null, note: 'Shop name']
  "category_id" integer [note: 'e.g., Clothing, Food, Electronics']
  "description" text [note: 'Detailed shop description']
  "owner_id" integer [note: 'Reference to owner (if applicable)']
  "address" text [not null]
  "address_complement" text [note: 'Apartment, suite, etc.']
  "city" varchar(100) [not null]
  "postal_code" varchar(10) [not null]
  "country" varchar(50) [not null, default: 'France']
  "latitude" decimal(10,8) [note: 'GPS latitude coordinate']
  "longitude" decimal(11,8) [note: 'GPS longitude coordinate']
  "phone_number" varchar(20) [note: 'Contact phone number']
  "email" varchar(255) [note: 'Contact email address']
  "website" varchar(255) [note: 'Shop website URL']
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamp [default: `CURRENT_TIMESTAMP`]
}

Table "shop_categories" {
  "id" serial [pk, not null, increment]
  "category_name" varchar(50) [unique, not null]
}

Table "shop_owners" {
  "id" serial [pk, not null, increment]
  "first_name" varchar(50) [not null]
  "last_name" varchar(50) [not null]
  "account_email" varchar(255) [unique, not null, note: 'Must be a valid email address']
  "account_phone_number" varchar(20) [unique, note: 'International format preferred']
  "account_password_hash" varchar(255) [not null, note: 'Argon2 password hash']
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamp [default: `CURRENT_TIMESTAMP`]
}

Table "package_statuses" {
  "id" serial [pk, not null, increment]
  "status_code" varchar(20) [unique, not null, note: 'Short status code']
  "status_name" varchar(50) [unique, not null, note: 'Human//readable status']
  "description" text [note: 'Detailed status description']
  "is_final_status" boolean [default: false, note: 'Indicates if this is an end state']
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
}

Table "packages" {
  "id" serial [pk, not null, increment]
  "tracking_number" varchar(20) [unique, not null, note: 'External tracking identifier']
  "current_status_id" integer [not null]
  "current_office_id" integer
  "recipient_client_id" integer [not null]
  "onpackage_sender_name" varchar(100) [not null]
  "onpackage_sender_address" text [not null]
  "sender_shop_id" integer [not null]
  "onpackage_recipient_name" varchar(100) [not null]
  "onpackage_destination_address" text [not null]
  "weight_kg" decimal(8,3) [note: 'Weight in kilograms']
  "dimensions_cm" jsonb [note: 'Length, width, height in cm']
  "volume_m3" decimal(10,6) [note: 'Calculated volume in cubic meters']
  "is_priority" boolean [default: false]
  "is_fragile" boolean [default: false]
  "declared_value" decimal(10,2) [note: 'Declared value for insurance']
  "estimated_delivery_date" date
  "actual_delivery_date" timestamp
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamp [default: `CURRENT_TIMESTAMP`]
}

Table "transit_events" {
  "id" serial [pk, not null, increment]
  "package_id" integer [not null]
  "event_timestamp" timestamp [default: `CURRENT_TIMESTAMP`]
  "status_id" integer [not null]
  "office_id" integer [note: 'Office where event occurred']
  "delivery_person_id" integer [note: 'Personnel handling the package']
  "event_sequence" integer [not null, note: 'Order of events for this package']
  "previous_event_id" integer [note: 'Reference to previous event']
  "event_description" text [note: 'Detailed event information']
  "exception_reason" varchar(255) [note: 'Reason for delays or issues']
  "signature_required" boolean [default: false]
  "signature_obtained" boolean [default: false]
  "recipient_name" varchar(100) [note: 'Who received the package']
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
}

Ref:"post_offices"."id" < "delivery_personnel"."primary_office_id"

Ref:"delivery_companies"."id" < "delivery_personnel"."company_id"

Ref:"shop_categories"."id" < "shops"."category_id"

Ref:"shop_owners"."id" < "shops"."owner_id"

Ref:"clients"."id" < "packages"."recipient_client_id"

Ref:"package_statuses"."id" < "packages"."current_status_id"

Ref:"post_offices"."id" < "packages"."current_office_id"

Ref:"shops"."id" < "packages"."sender_shop_id"

Ref:"packages"."id" < "transit_events"."package_id"

Ref:"package_statuses"."id" < "transit_events"."status_id"

Ref:"post_offices"."id" < "transit_events"."office_id"

Ref:"delivery_personnel"."id" < "transit_events"."delivery_person_id"

Ref:"transit_events"."id" < "transit_events"."previous_event_id"
